# rusty_python

./: Cargo.toml  test.random  test.random.blake3  test_rusty_python.py
scripts/: activate.sh  build_local.sh  setup_env.sh
src/: lib.rs
